src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Advisory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advisory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Analyst_Count_Data__c</fullName>
        <description>Field where it will store the data from the workflow on how many &quot;GSA Analyst&quot; added on the meeting.</description>
        <label>Analyst Count Data</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Analysts__c</fullName>
        <label>Analysts</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adam Shapton</fullName>
                </value>
                <value>
                    <fullName>Alan Peterson</fullName>
                </value>
                <value>
                    <fullName>Alexander Wu</fullName>
                </value>
                <value>
                    <fullName>Alexandra Boyle</fullName>
                </value>
                <value>
                    <fullName>Alexis Skitini</fullName>
                </value>
                <value>
                    <fullName>Alex Williamson</fullName>
                </value>
                <value>
                    <fullName>Alistair Bush</fullName>
                </value>
                <value>
                    <fullName>Allyson Bruner</fullName>
                </value>
                <value>
                    <fullName>Amanda Nguyen</fullName>
                </value>
                <value>
                    <fullName>Andres Toome</fullName>
                </value>
                <value>
                    <fullName>Andrew McCulloch</fullName>
                </value>
                <value>
                    <fullName>Andrew Simmons</fullName>
                </value>
                <value>
                    <fullName>Andrew Spindler</fullName>
                </value>
                <value>
                    <fullName>Anna Cervisi</fullName>
                </value>
                <value>
                    <fullName>Ashton Stansbury</fullName>
                </value>
                <value>
                    <fullName>Barry Saks</fullName>
                </value>
                <value>
                    <fullName>Bayle Smith</fullName>
                </value>
                <value>
                    <fullName>Ben Perkins</fullName>
                </value>
                <value>
                    <fullName>Brandi Mallinger</fullName>
                </value>
                <value>
                    <fullName>Brett Lawrence</fullName>
                </value>
                <value>
                    <fullName>Carolina Paini</fullName>
                </value>
                <value>
                    <fullName>Casey Thormahlen</fullName>
                </value>
                <value>
                    <fullName>Cedrik Lachance</fullName>
                </value>
                <value>
                    <fullName>Chris Chan</fullName>
                </value>
                <value>
                    <fullName>Chris Darling</fullName>
                </value>
                <value>
                    <fullName>Chris Lucarelli</fullName>
                </value>
                <value>
                    <fullName>Christos Savvinidis</fullName>
                </value>
                <value>
                    <fullName>Claire Arora</fullName>
                </value>
                <value>
                    <fullName>Claire Smead</fullName>
                </value>
                <value>
                    <fullName>Craig Leupold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To_Name__c</fullName>
        <formula>Owner:User.FirstName&amp;&quot; &quot;&amp;Owner:User.LastName</formula>
        <label>Assigned To Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>CventEvents__Attendee__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bounced_Salesloft__c</fullName>
        <label>Bounced (Salesloft)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>true</fullName>
                </value>
                <value>
                    <fullName>false</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDB_ID__c</fullName>
        <externalId>true</externalId>
        <label>CDB_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Canceled_Date__c</fullName>
        <label>Canceled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Use_Case__c</fullName>
        <description>This will be a space for the team members to write in information on the use case for that client as discussed in the event</description>
        <label>Client Use Case</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Co_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Owner 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100, &quot;Key Event/Task Details Captured&quot;,&quot;Missing: &quot;&amp;IF( LEN( Subject ) &lt; 3,&quot;Quality Subject Description, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhoId)=0,&quot;Contact/Lead Reference, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhatId)=0,&quot;Account/Opportunity Reference&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(  Subject  ) &lt; 3, 0,30) + IF( LEN(  WhoId ) = 0, 0,40) + IF( LEN(  WhatId ) = 0, 0,30)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date2__c</fullName>
        <description>Custom Date field to use on reports/dashboards</description>
        <formula>ActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diagnostic_Discussion__c</fullName>
        <label>Diagnostic Discussion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>temp field for event audit</description>
        <label>Event Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cvent Event Number</label>
        <referenceTo>CventEvents__Event__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feedback_Entered__c</fullName>
        <label>Feedback Entered?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSA_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GSA Analyst</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a contact from the Green Street Advisors Account</errorMessage>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>Green Street Advisors</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assigned Actvities to GSA Analysts</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours_Spent__c</fullName>
        <formula>Minutes_Spent__c/60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LID__Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LID__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Minutes_Spent__c</fullName>
        <description>How many minutes did Data Support spend on this client call/project</description>
        <label>Minutes Spent</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model_Count__c</fullName>
        <label>Model Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Team__c</fullName>
        <description>Allows for reporting based on manager, not just the role hierarchy</description>
        <formula>OR(
Owner:User.Manager.Id =  $User.Id,
Owner:User.Id =  $User.Id)</formula>
        <label>My Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Show_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Contact__c</fullName>
        <formula>Owner:User.Contact_Id__c</formula>
        <label>Owner Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Advisory_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential Advisory Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products_Discussed__c</fullName>
        <label>Products Discussed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Canada Research + REIT Data</fullName>
                </value>
                <value>
                    <fullName>Data License: Petrol Station Forecourt Data</fullName>
                </value>
                <value>
                    <fullName>Data License Directory</fullName>
                </value>
                <value>
                    <fullName>DataLink</fullName>
                    <label>DataLink (Legacy)</label>
                </value>
                <value>
                    <fullName>Debt Databases</fullName>
                </value>
                <value>
                    <fullName>EU Market Data</fullName>
                </value>
                <value>
                    <fullName>EU Market Forecasts</fullName>
                </value>
                <value>
                    <fullName>EURO Research</fullName>
                </value>
                <value>
                    <fullName>EU Sales Comps</fullName>
                </value>
                <value>
                    <fullName>EU Standardized Downloads</fullName>
                </value>
                <value>
                    <fullName>Excel Add-In</fullName>
                </value>
                <value>
                    <fullName>Green Street News: Canada</fullName>
                </value>
                <value>
                    <fullName>IJGlobal Investor</fullName>
                </value>
                <value>
                    <fullName>IJGlobal News</fullName>
                </value>
                <value>
                    <fullName>LDC data directory</fullName>
                </value>
                <value>
                    <fullName>Local Data Online</fullName>
                </value>
                <value>
                    <fullName>News - ABA</fullName>
                </value>
                <value>
                    <fullName>News - CMA</fullName>
                </value>
                <value>
                    <fullName>News - REA</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Portfolio Tools</fullName>
                </value>
                <value>
                    <fullName>REIT Data</fullName>
                </value>
                <value>
                    <fullName>REIT Data – Company Analysis</fullName>
                </value>
                <value>
                    <fullName>REIT Data – Detailed NAVs</fullName>
                </value>
                <value>
                    <fullName>REIT Data – Interactive Charting</fullName>
                </value>
                <value>
                    <fullName>REIT Data – Portfolio Search</fullName>
                </value>
                <value>
                    <fullName>REIT Data – Retail DB</fullName>
                </value>
                <value>
                    <fullName>REIT Data – Weekly Pricing Review</fullName>
                </value>
                <value>
                    <fullName>Snowflake</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesLoft1__Call_Disposition__c</fullName>
        <description>The SalesLoft disposition value that the user logged during the call.</description>
        <label>Call Disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__Call_Duration_in_Minutes__c</fullName>
        <formula>CallDurationInSeconds  / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Duration in Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__Call_Sentiment__c</fullName>
        <description>The SalesLoft sentiment value that the user logged during the call.</description>
        <label>Call Sentiment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__SalesLoft_Cadence_Name__c</fullName>
        <description>The name of the SalesLoft Cadence where the tasks was logged.</description>
        <label>SalesLoft Cadence Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__SalesLoft_Clicked_Count__c</fullName>
        <description>How many clicks were received on a URL within a SalesLoft email.</description>
        <label>SalesLoft Clicked Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__SalesLoft_Connected_Count__c</fullName>
        <formula>IF( 
CONTAINS( SalesLoft1__Call_Disposition__c , &quot;Connected&quot; ), 1, 
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SalesLoft Connected Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__SalesLoft_Email_Template_Title__c</fullName>
        <description>The name given to a SalesLoft email template.</description>
        <label>SalesLoft Email Template Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__SalesLoft_Replies_Count__c</fullName>
        <description>How many replies a SalesLoft email has received.</description>
        <label>SalesLoft Replies Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__SalesLoft_Step_Day__c</fullName>
        <description>The day in the SalesLoft Cadence that a step has been set to be run.</description>
        <label>SalesLoft Step Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__SalesLoft_Type__c</fullName>
        <formula>IF(BEGINS(Subject,&apos;Email:&apos;),&apos;Email&apos;,
IF(BEGINS(Subject,&apos;Sent Email:&apos;),&apos;Email&apos;,
IF(BEGINS(Subject,&apos;Call&apos;),&apos;Call&apos;,
IF(BEGINS(Subject,&apos;LinkedIn Sales Navigator: InMail&apos;),&apos;LinkedIn - InMail&apos;,
IF(BEGINS(Subject,&apos;LinkedIn Sales Navigator: Research&apos;),&apos;LinkedIn - Research&apos;,
IF(BEGINS(Subject,&apos;LinkedIn Sales Navigator: Connection Request&apos;),&apos;LinkedIn - Connection Request&apos;,
IF(BEGINS(Subject,&apos;LinkedIn Sales Navigator: Ask for an Introduction&apos;),&apos;LinkedIn - Ask for an Introduction&apos;,
IF(BEGINS(Subject,&apos;Meeting Booked:&apos;),&apos;Meeting&apos;,
IF(BEGINS(Subject,&apos;Other:&apos;),&apos;Other&apos;,
IF(BEGINS(Subject,&apos;Reply:&apos;),&apos;Reply&apos;,
IF(BEGINS(Subject,&apos;Note&apos;),&apos;Note&apos;,
IF(BEGINS(Subject,&apos;Hot Lead:&apos;),&apos;Hot Lead&apos;,
IF(BEGINS(Subject,&apos;Recording:&apos;),&apos;Conversation Intelligence Recording&apos;,
IF(BEGINS(Subject,&apos;Message:&apos;),&apos;Message&apos;,
NULL))))))))))))))</formula>
        <label>SalesLoft Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__SalesLoft_Unique_Click_Count__c</fullName>
        <formula>IF(
SalesLoft1__SalesLoft_Clicked_Count__c&gt;0,1,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SalesLoft Unique Click Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__SalesLoft_Unique_Reply_Count__c</fullName>
        <formula>IF(
SalesLoft1__SalesLoft_Replies_Count__c &gt; 0, 1, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SalesLoft Unique Reply Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__SalesLoft_Unique_View_Count__c</fullName>
        <formula>IF ( SalesLoft1__SalesLoft_View_Count__c  &gt; 0, 1,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SalesLoft Unique View Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesLoft1__SalesLoft_View_Count__c</fullName>
        <description>How many opens/views a SalesLoft email has received.</description>
        <label>SalesLoft View Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salesloft_Meeting_Type__c</fullName>
        <label>Salesloft Meeting Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <label>Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Analyst_Hours__c</fullName>
        <formula>if ((ISNUMBER(Text(Analyst_Count_Data__c))  &amp;&amp; Analyst_Count_Data__c  &gt;  0),  Analyst_Count_Data__c  *  Minutes_Spent__c  /  60, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Analyst Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Type__c</fullName>
        <label>Training Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Introduction</fullName>
                </value>
                <value>
                    <fullName>Working With</fullName>
                </value>
                <value>
                    <fullName>Comprehensive Review</fullName>
                </value>
                <value>
                    <fullName>Overview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_Reporting__c</fullName>
        <description>Used for reporting on task types</description>
        <label>Activity Type*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Demo__c</fullName>
        <description>Choose whether this event is a web demo</description>
        <label>Web Demo?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>affectlayer__AffectLayer_Call_Id__c</fullName>
        <externalId>true</externalId>
        <label>AffectLayer Call Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>affectlayer__ChorusEngagement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engagement</label>
        <referenceTo>affectlayer__Engagement__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>affectlayer__Chorus_Call_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Chorus_Call_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>eContacts__Bundle__c</fullName>
        <externalId>true</externalId>
        <label>Bundle</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>maps__BaseObjectId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Base Object</label>
        <referenceTo>maps__BaseObject__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>BaseObjectIds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__LayerId__c</fullName>
        <label>Layer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__WA_AdvRouteWaypoint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the default lookup to associate the Advanced Route Waypoint</description>
        <label>Maps Advanced Route Waypoint</label>
        <referenceTo>maps__AdvRouteWaypoint__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>